--- a/content.yaml
+++ b/content.yaml
@@ -84,26 +84,26 @@ Changes:
       data/Events/{{ModId}}_EdelweissHouse,
       data/Events/{{ModId}}_EdelweissAttic,
       data/Events/{{ModId}}_EdelweissBasement
-    FromFile: "data/Blank.json"
+    FromFile: "data/Blank.yaml"
   # ////////////////////////////////////////////includes
   - Logname: EdelIncludes
     Action: Include
     FromFile: >
-      data/animationDescriptions.json,
-      data/ConcessionTastes.json,
-      data/DeathInsurance.json,
-      data/Dialogue.json,
-      data/Edelweiss.json,
-      data/Festivals.json,
-      data/Gifts.json,
-      data/HeartEvents.json,
-      data/Locations.json,
-      data/Mail.json,
-      data/MarriageDialogue.json,
-      data/Outfits.json,
-      data/Schedule.json,
-      data/Shop.json,
-      data/ScheduleDialogue.json,
-      data/SpaceCore.json, 
-      data/StringsFromCSFiles.json,
-      data/TriggerActions.json
+      data/animationDescriptions.yaml,
+      data/ConcessionTastes.yaml,
+      data/DeathInsurance.yaml,
+      data/Dialogue.yaml,
+      data/Edelweiss.yaml,
+      data/Festivals.yaml,
+      data/Gifts.yaml,
+      data/HeartEvents.yaml,
+      data/Locations.yaml,
+      data/Mail.yaml,
+      data/MarriageDialogue.yaml,
+      data/Outfits.yaml,
+      data/Schedule.yaml,
+      data/Shop.yaml,
+      data/ScheduleDialogue.yaml,
+      data/SpaceCore.yaml, 
+      data/StringsFromCSFiles.yaml,
+      data/TriggerActions.yaml
